ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-efs
    #  namespace: myapplications-ns
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
      #    alb.ingress.kubernetes.io/group.name: frontend
      #alb.ingress.kubernetes.io/group.name: my-alb-group  #Use this to share ALB among multiple ingresses. #CostEffective
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:659328422194:certificate/44ef16c5-9e9f-4e74-9e8a-c56da28ee9f9
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
     # Action to redirect HTTP traffic to HTTPS
     #    alb.ingress.kubernetes.io/actions.ssl-redirect: "443"
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'

    alb.ingress.kubernetes.io/subnets: subnet-1cb73310,subnet-ed5fc488,subnet-6713e14c,subnet-52c3100b
  labels:
    name: wordpress-efs
spec:
  ingressClassName: alb
  rules:
    - host: test.nirajvara.in
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ssl-redirect
              port:
                name: use-annotation
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wordpress-efs
              port:
                number: 80
